tests/invalid/24_bit_bool_not.ml
int main() {
    bool b = true;

    bool x = ~b;

    return 0;
}
